[gd_scene load_steps=31 format=3 uid="uid://cyj81de1j3kv0"]

[ext_resource type="PackedScene" uid="uid://8loce3lc04mm" path="res://enemies/enemy.tscn" id="1_xl5x8"]
[ext_resource type="Texture2D" uid="uid://cracshb8l84np" path="res://assets/spritesheets/snake.png" id="2_d37jm"]
[ext_resource type="Script" path="res://scripts/states/chase_to_aoe_state.gd" id="3_wxanu"]
[ext_resource type="Script" path="res://scripts/states/aoe_state.gd" id="4_d6jkk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g0224"]
atlas = ExtResource("2_d37jm")
region = Rect2(0, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba2nf"]
atlas = ExtResource("2_d37jm")
region = Rect2(600, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaudd"]
atlas = ExtResource("2_d37jm")
region = Rect2(1200, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_a27tr"]
atlas = ExtResource("2_d37jm")
region = Rect2(1800, 0, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iej"]
atlas = ExtResource("2_d37jm")
region = Rect2(0, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_08qc8"]
atlas = ExtResource("2_d37jm")
region = Rect2(600, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr08l"]
atlas = ExtResource("2_d37jm")
region = Rect2(1200, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg46g"]
atlas = ExtResource("2_d37jm")
region = Rect2(1800, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxgig"]
atlas = ExtResource("2_d37jm")
region = Rect2(2400, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s3bx"]
atlas = ExtResource("2_d37jm")
region = Rect2(3000, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5n2b"]
atlas = ExtResource("2_d37jm")
region = Rect2(3600, 1200, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1l3g"]
atlas = ExtResource("2_d37jm")
region = Rect2(1800, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_e343v"]
atlas = ExtResource("2_d37jm")
region = Rect2(2400, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_vumbj"]
atlas = ExtResource("2_d37jm")
region = Rect2(3000, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j7s0"]
atlas = ExtResource("2_d37jm")
region = Rect2(3600, 600, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1sl3"]
atlas = ExtResource("2_d37jm")
region = Rect2(0, 1800, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_cybbe"]
atlas = ExtResource("2_d37jm")
region = Rect2(600, 1800, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0upf"]
atlas = ExtResource("2_d37jm")
region = Rect2(1200, 1800, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhp8v"]
atlas = ExtResource("2_d37jm")
region = Rect2(1800, 1800, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcfu2"]
atlas = ExtResource("2_d37jm")
region = Rect2(2400, 1800, 600, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_urqkp"]
atlas = ExtResource("2_d37jm")
region = Rect2(3000, 1800, 600, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_pstlo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0224")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba2nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaudd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a27tr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08qc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr08l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg46g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxgig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s3bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5n2b")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1l3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e343v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vumbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j7s0")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1sl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cybbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0upf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhp8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcfu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urqkp")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_um6xd"]
height = 2.50938
radius = 0.47758

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o5yff"]
height = 0.5
radius = 6.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r1ceh"]
transparency = 1
albedo_color = Color(0.698039, 0.294118, 1, 0.254902)

[sub_resource type="CylinderMesh" id="CylinderMesh_k770s"]
material = SubResource("StandardMaterial3D_r1ceh")
top_radius = 6.0
bottom_radius = 6.0
height = 0.5

[node name="FearEnemy" instance=ExtResource("1_xl5x8")]
collision_layer = 0
collision_mask = 4
floor_max_angle = 0.0

[node name="EnemySprite" parent="." index="0"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -1.22764, 1.38468, 0)
modulate = Color(1, 1, 1, 1)
sprite_frames = SubResource("SpriteFrames_pstlo")
animation = &"idle"
frame_progress = 0.123197

[node name="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.626362, 0)
shape = SubResource("CylinderShape3D_um6xd")

[node name="AOEAttack" type="Area3D" parent="." index="2"]
unique_name_in_owner = true
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AOEAttack" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.376378, 0)
shape = SubResource("CylinderShape3D_o5yff")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AOEAttack" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.362936, 0)
mesh = SubResource("CylinderMesh_k770s")

[node name="HurtboxComponent" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.771269, 0)

[node name="HitboxComponent" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.762422, 0)
collision_layer = 0

[node name="StatsComponent" parent="Enemy" index="0"]
dash_distance = 0.0
damage = 5.0
xp_gain = 30.0

[node name="EnemyStateMachine" parent="Enemy" index="6" node_paths=PackedStringArray("initial_state")]
initial_state = NodePath("Chase")

[node name="Chase" type="Node" parent="Enemy/EnemyStateMachine" index="0" node_paths=PackedStringArray("path_finder", "move_component", "stats", "aoe_state")]
script = ExtResource("3_wxanu")
path_finder = NodePath("../../PathFindComponent")
move_component = NodePath("../../MovementComponent")
stats = NodePath("../../StatsComponent")
aoe_state = NodePath("../AOE")

[node name="AOE" type="Node" parent="Enemy/EnemyStateMachine" index="1" node_paths=PackedStringArray("path_finder", "move_component", "stats")]
script = ExtResource("4_d6jkk")
path_finder = NodePath("../../PathFindComponent")
move_component = NodePath("../../MovementComponent")
stats = NodePath("../../StatsComponent")
